# build-your-own-recommender

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: container.yml  deployment-template.yml  extended.yml  pr.yml
configs/: demo.yaml  production.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  pvc.yaml  secret.example.yaml  service-account.yaml  service.yaml
deploy/prometheus/: prometheus.yml
docs/: architecture.md  artifacts.md  batch-inference.md  configuration.md  data-pipeline.md  deployment.md  evaluation.md  feature-engineering.md  final-audit.md  index.md  limitations.md  monitoring.md  negative-sampling.md  observability.md  operations.md  recommendation-concepts.md  security.md  serving.md  testing.md  training.md  troubleshooting.md  two-tower-theory.md  vector-search.md
docs/adr/: 0001-two-tower-retrieval.md
docs/runbooks/: bundle-rollback.md  readiness-failure.md
src/recommender/: __init__.py  __main__.py  cli.py  exceptions.py
src/recommender/artifacts/: __init__.py  manifest.py  publication.py
src/recommender/batch/: __init__.py  job.py
src/recommender/caching/: __init__.py  base.py  memory.py  redis.py
src/recommender/config/: __init__.py  loading.py  models.py
src/recommender/data/: __init__.py  preparation.py  schemas.py  synthetic.py  validation.py
src/recommender/embeddings/: __init__.py  export.py
src/recommender/evaluation/: __init__.py  evaluator.py  metrics.py
src/recommender/features/: __init__.py  processor.py
src/recommender/indexing/: __init__.py  base.py  build.py  exact.py  faiss_index.py
src/recommender/models/: __init__.py  losses.py  two_tower.py
src/recommender/monitoring/: __init__.py  drift.py
src/recommender/observability/: __init__.py  logging.py  metrics.py
src/recommender/repositories/: __init__.py  base.py  local.py  postgres.py
src/recommender/reranking/: __init__.py  policies.py
src/recommender/retrieval/: __init__.py  runtime.py
src/recommender/sampling/: __init__.py  (+1 more)
tests/: conftest.py
tests/concurrency/: test_shared_runtime_components.py
tests/contract/: test_api.py  test_cli.py
tests/e2e/: test_api_pipeline.py
tests/failure_injection/: test_artifact_failures.py
tests/integration/: test_pipeline.py
tests/performance/: test_latency.py
tests/property/: test_reranking.py
tests/regression/: test_special_token_vocab.py
tests/security/: test_paths.py
tests/unit/: test_config.py  test_data.py  test_features.py  test_index_rerank_cache_artifacts.py  test_metrics.py  test_model.py  test_monitoring_adapters_security.py  test_sampling.py
(+12 files in other folders)
