[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "two-tower-recommender"
version = "0.1.0"
description = "Production-oriented two-tower recommendation retrieval platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Recommender Platform Team" }]
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "mlflow-skinny>=2.17,<4",
  "numpy>=2.0,<3",
  "pandas>=2.2,<4",
  "prometheus-client>=0.21,<1",
  "pyarrow>=23.0.1,<26",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-json-logger>=3,<5",
  "pyyaml>=6,<7",
  "sqlalchemy>=2,<3",
  "torch>=2.4,<3",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ann = ["faiss-cpu>=1.9,<2"]
redis = ["redis>=5,<9"]
postgres = ["psycopg[binary,pool]>=3.2,<4"]
telemetry = ["opentelemetry-api>=1.27,<2", "opentelemetry-sdk>=1.27,<2"]
dev = [
  "bandit[toml]>=1.7,<2",
  "detect-secrets>=1.5,<2",
  "hypothesis>=6.112,<7",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.26,<2",
  "mypy>=1.11,<3",
  "pip-audit>=2.7,<3",
  "pre-commit>=3.8,<5",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
  "testcontainers>=4.8,<5",
  "pandas-stubs>=2.2,<4",
  "types-PyYAML>=6,<7",
]

[project.scripts]
recommender = "recommender.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/recommender"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["recommender"]
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: component integration tests",
  "e2e: end-to-end pipeline tests",
  "performance: environment-sensitive performance tests",
  "security: security behavior tests",
]

[tool.coverage.run]
source = ["recommender"]
branch = true
omit = [
  "src/recommender/__main__.py",
  "src/recommender/cli.py",
  "src/recommender/**/base.py",
  "src/recommender/repositories/postgres.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
